--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     compile 'me.leolin:ShortcutBadger:1.1.4@aar'
     compile 'com.google.firebase:firebase-auth:+'
+    compile 'com.google.firebase:firebase-dynamiclinks:+'
     compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
        transitive = true
     }
