--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	</engines>
 
 	<preference name="APP_DOMAIN" />
-	<preference name="PAGE_LINK_DOMAIN" />
+	<!--<preference name="PAGE_LINK_DOMAIN" />-->
 
 
 	<platform name="android">
@@ -105,14 +105,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		<config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
 			<array>
 				<string>applinks:$APP_DOMAIN</string>
-				<string>applinks:$PAGE_LINK_DOMAIN</string>
+				<!--<string>applinks:$PAGE_LINK_DOMAIN</string>-->
 			</array>
 		</config-file>
 
 		<config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
 			<array>
 				<string>applinks:$APP_DOMAIN</string>
-				<string>applinks:$PAGE_LINK_DOMAIN</string>
+				<!--<string>applinks:$PAGE_LINK_DOMAIN</string>-->
 			</array>
 		</config-file>
 		<resource-file src="src/ios/GoogleService-Info.plist" />
